[package]
authors = ["Pedro J. Ortiz <pedro@pjortiz.com>"]
edition = "2021"
name = "oscar-tools"
version = "0.1.0"
[dependencies]
env_logger = "0.10.0"
flate2 = "1.0.22"
itertools = "*"
log = "0.4.14"
oscar-io = "0.2.3"
rand = "*"
rayon = "1.5.1"
runiq-lib = "1.2.2"
serde_json = "1.0.78"
sha2 = "0.10.1"
oxilangtag = "0.1.3"

[dependencies.clap]
features = ["derive"]
version = "3.0.14"

[dev-dependencies]
oscar-io = "0.2.2"
tempfile = "3.3.0"
tlsh = "0.1.0"
[profile.release]
debug = true
