[package]
authors = ["Pedro J. Ortiz <pedro@pjortiz.com>"]
edition = "2021"
name = "oscar-tools"
version = "0.2.0"

[features]
zstd = ["dep:zstd"]

[dependencies]
env_logger = "0.9.0"
flate2 = "1.0.22"
itertools = "*"
log = "0.4.14"
oscar-io = "0.1.3"
rand = "*"
rayon = "1.5.1"
runiq-lib = "1.2.2"
serde_json = "1.0.78"
sha2 = "0.10.1"
zstd = {version="0.11.2", optional=true}

[dependencies.clap]
features = ["derive"]
version = "3.2.25"

[dev-dependencies]
oscar-io = "0.1.3"
tempfile = "3.3.0"

[profile.release]
debug = true

